Closed
Bug 674861
Opened 14 years ago
Closed 14 years ago
contentEditable lists should not be splittable
Categories
(Core :: DOM: Editor, defect)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
mozilla8
People
(Reporter: kaze, Assigned: kaze)
References
Details
Attachments
(2 files, 2 obsolete files)
958 bytes,
text/html
|
Details | |
7.37 KB,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
In design mode, pressing [Return] twice in a list (ol, ul, dl) splits the list and inserts a paragraph. When the list is the active editing host, it should not be split.
Reproducible: Always
Steps to Reproduce:
1. create an empty HTML file with the following code:
<ul contenteditable>
<li> foo </li>
<li> bar </li>
</ul>
2. put the caret at the end of the first list item
3. press [Return] twice
4. the resulting code is:
<ul contenteditable>
<li> foo </li>
</ul>
<p> <br _moz_dirty> </p>
<ul contenteditable>
<li> bar </li>
</ul>
Expected Results:
<ul contenteditable>
<li> foo </li>
<li> <br _moz_dirty> </li>
<li> <br _moz_dirty> </li>
<li> bar </li>
</ul>
Assignee | ||
Comment 1•14 years ago
|
||
bug 597349 and bug 570144 might be related.
Assignee | ||
Updated•14 years ago
|
Assignee: nobody → kaze
Assignee | ||
Updated•14 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 2•14 years ago
|
||
Assignee | ||
Comment 3•14 years ago
|
||
Assignee | ||
Comment 4•14 years ago
|
||
slightly factorized code + unit tests
Attachment #549776 -
Attachment is obsolete: true
Attachment #549839 -
Flags: review?(ehsan)
Comment 5•14 years ago
|
||
Comment on attachment 549839 [details] [diff] [review]
patch proposal
Review of attachment 549839 [details] [diff] [review]:
-----------------------------------------------------------------
::: editor/libeditor/html/nsHTMLEditRules.cpp
@@ +6782,2 @@
> // if we are in an empty listitem, then we want to pop up out of the list
> + // but only if prefs says it's ok and if the parent isn't the active editing host.
Nit: if the list container isn't the active editing host.
Attachment #549839 -
Flags: review?(ehsan) → review+
Assignee | ||
Comment 6•14 years ago
|
||
same patch w/ fixed comment.
Attachment #549839 -
Attachment is obsolete: true
Attachment #550096 -
Flags: review?(ehsan)
Comment 7•14 years ago
|
||
Comment on attachment 550096 [details] [diff] [review]
patch proposal
(You didn't really need a review for this one :-)
Attachment #550096 -
Flags: review?(ehsan) → review+
Comment 8•14 years ago
|
||
Pushed to inbound.
Comment 9•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
You need to log in
before you can comment on or make changes to this bug.
Description
•