Bug 674861 - contentEditable lists should not be splittable; r=ehsan

In design mode, pressing [Return] twice in a list (ol, ul, dl) splits the list
and inserts a paragraph. When the list is the active editing host, it should not
be split.